Fixed navbar alignment with content

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -6,6 +6,9 @@
   =require twitter-bootstrap-static/fontawesome
   */
 .navbar{
+  // to make sure navbar doesnt overlap content
+  margin-bottom:15px;
+  
   .navbar-inner{
     background-image:none;
     background-color:#2980b9;
